2009-02-28  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/Navigation.java: Avoid that the
	navigation is reloaded on each access if the modification time of the
	depend.xml file or one of its included fragments is newer than the
	current system time.

2009-02-25  Martin Leidig  <mleidig@schlund.de>

	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java:
	don't catch TransformerExceptions in renderFontify, because errors in
	callback functions (page status isAccessible(), etc.) can cause that
	the page is only partly rendered/displayed. It's an error if such
	exceptions are occurring and the regular error page should be
	displayed.

2009-02-20  Martin Leidig  <mleidig@schlund.de>

	Fixed browser reload problem: reloading a page used in multiple flows
	could cause the selection of the wrong pageflow if the URL doesn't
	contain a __lf parameter indicating the right flow. URLs don't contain
	the __lf parameter if they're created by a redirect (for forcing SSL
	or getting the page name into the URL). Fixed the problem by adding
	the __lf parameter from the originating URL to the redirection URL.
	* src/org/pustefixframework/http/PustefixContextXMLRequestHandler.java
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java

2009-02-17  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
	Fixed authorization exceptions and NPEs for unconfigured pages

2009-02-16  Martin Leidig  <mleidig@schlund.de>

	* build-maven.xml: added support for deployment via WebDAV and use it
	as default, added support for deploying releases and snapshots to
	different locations (can be set using the build.properties
	remote.repository.url.releases and remote.repository.url.snapshots)

2009-02-13  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/iwrapper.xsl: removed @SuppressWarnings at local
	variable definitions and only create definition if variable is used